<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">
    <!-- this belongs to background image which is in drawable resources-->

    <!--Well we could use vector for text but due 3 day's to complete UI it is fine with text-->

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="497dp"
        android:background="@drawable/splash_screen_back_ground"
        android:contentDescription="@string/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/harlow_solid_regular"
        android:text="@string/logo_text"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- this belongs to dish_logo image which is in drawable resources-->

    <!-- this belongs to dish_logo image which is in drawable resources-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:background="@drawable/splash_screen_logo"
        android:contentDescription="@string/food_logo"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/harlow_solid_regular"
        android:text="@string/app_quote"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:layout_constraintVertical_bias="0.292" />

    <!-- This is button some of it's component comes from drawable resources for round corner and button color-->
    <Button
        android:id="@+id/get_started"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.636" />

</androidx.constraintlayout.widget.ConstraintLayout>